--- a/app/templates/auth/register_company.html
+++ b/app/templates/auth/register_company.html
@@ -304,7 +304,7 @@
                 </form>
                 <p class="helper-text">
                     لست شركة؟
-                    <a href="{{ url_for('auth.register_page') }}">سجّل كعضو للاستفادة من العروض</a>
+                    <a href="{{ url_for('auth.register_member') }}">سجّل كعضو للاستفادة من العروض</a>
                 </p>
             </section>
         </main>
