--- a/app/templates/auth/register_select.html
+++ b/app/templates/auth/register_select.html
@@ -225,7 +225,7 @@
                 </p>
             </header>
             <section class="options-grid" aria-label="خيارات التسجيل">
-                <a class="option-card" href="{{ url_for('auth.register_page') }}">
+                <a class="option-card" href="{{ url_for('auth.register_member') }}">
                     <span class="option-icon" aria-hidden="true"><i class="fa-solid fa-gift"></i></span>
                     <div class="option-content">
                         <h2 class="option-title">عضو للاستفادة من الخصومات</h2>
@@ -239,7 +239,7 @@
                         <i class="fa-solid fa-arrow-left"></i>
                     </span>
                 </a>
-                <a class="option-card option-card--company" href="{{ url_for('auth.company_register_page') }}">
+                <a class="option-card option-card--company" href="{{ url_for('auth.register_company') }}">
                     <span class="option-icon" aria-hidden="true"><i class="fa-solid fa-building"></i></span>
                     <div class="option-content">
                         <h2 class="option-title">شركة لتقديم العروض وجذب الأعضاء</h2>
